--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,21 @@ debugpy==1.8.1
 decorator==5.1.1
 exceptiongroup==1.2.1
 executing==2.0.1
+filelock==3.14.0
+fsspec==2024.3.1
 idna==3.7
 ipykernel==6.29.4
 ipython==8.24.0
 jedi==0.19.1
+Jinja2==3.1.3
 joblib==1.4.2
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
+mpmath==1.3.0
 nest-asyncio==1.6.0
+networkx==3.3
 numpy==1.26.4
 packaging==24.0
 parso==0.8.4
@@ -34,7 +40,9 @@ scikit-learn==1.4.2
 scipy==1.13.0
 six==1.16.0
 stack-data==0.6.3
+sympy==1.12
 threadpoolctl==3.5.0
+torch==2.3.0
 tornado==6.4
 traitlets==5.14.3
 typing_extensions==4.11.0
